<resources>
    <string name="app_name">Africavision</string>
    <string name="voting_from_text">You are voting from:</string>
    <string name="africavision_title">AfricaVision</string>
    <string name="vote_now">VOTE NOW!</string>
    <string name="add_comment_btn_text">Add Comment</string>
    <string name="refresh_btn_text">Refresh</string>
    <string name="vote_qr_btn_text">Vote via QR</string>
    <string name="whole_experience_text">Wanna live the whole experience?</string>
    <string name="photo_TV_text">Take a photo of your TV playing AfricaVision now!</string>
    <string name="join_the_converstation_text">Join the converstation or</string>
    <string name="partyscope_btn_text">PARTYSCOPE</string>
    <string name="stage_img_description">AfricaVision Stage</string>
    <string name="partyscope_v1_0_text">PARTYSCOPE v1.0</string>
    <string name="partyscope_what_to_do_text">Dance like an animal and move your phone to party hard!</string>
    <string name="partyscope_sees_text">The PartyScope sees you are partying...</string>
    <string name="disco_ball_text">Disco Ball</string>
    <string name="add_a_comment_btn">Add a comment</string>
    <string name="comment_section">Comment Section</string>
    <string name="africavision_2023_title">AfricaVision 2023</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_your_magic">Share your magic</string>
    <string name="himself_delete_all_the_comments">Are you Satan himself? Do you hate hummanity? Go EXTREME and delete all the comments!</string>
    <string name="delete_all_comments">Delete All Comments</string>
    <string name="contestants">Contestants</string>
    <string name="vote_button">Vote</string>
    <string name="enter_your_nickname_hint">Enter your nickname</string>
    <string name="enter_your_comment_hint">Enter your comment</string>
    <string name="submit">Submit</string>
    <string name="nairobi_2023">Nairobi 2023</string>
</resources>