<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/africavision_2023_title"
        android:fontFamily="@font/aclonica"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_your_magic"
        android:textSize="16sp"
        android:paddingBottom="5dp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/editTextNickame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_nickname_hint"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editTextComments"
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:hint="@string/enter_your_comment_hint"
        android:inputType="textMultiLine"
        android:maxLines="5" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

</LinearLayout>
