<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#251545"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:padding="16dp"
        android:text="@string/africavision_2023_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_section"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <Button
        android:id="@+id/buttonAddComment"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA305"
        android:text="@string/add_a_comment_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewComments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/himself_delete_all_the_comments"
        android:textColor="#AA0000" />

    <Button
        android:id="@+id/buttonDeleteComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="deleteAllComments"
        android:text="@string/delete_all_comments"
        app:backgroundTint="#772A2A" />

    <Button
        android:id="@+id/buttonRefreshComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_btn_text"
        app:backgroundTint="#CD3100"
        app:cornerRadius="0dp" />

</LinearLayout>